fix Article API
