# storage/docs/api-docs.json
@@ -840,10 +840,35 @@
                     "description": "image",
                     "type": "string"
                 },
-                "status_id": {
-                    "description": "status_id",
-                    "type": "integer",
-                    "format": "int32"
+                "status_name": {
+                    "description": "status name",
+                    "type": "string",
+                    "enum": [
+                        "draft",
+                        "publish",
+                        "schedule"
+                    ]
+                },
+                "tags": {
+                    "description": "tags",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Tag"
+                    },
+                    "example": [
+                        "ball",
+                        "cool"
+                    ]
+                },
+                "categories": {
+                    "description": "categories",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Category"
+                    },
+                    "example": [
+                        "sport"
+                    ]
                 }
             }
         },
@@ -859,8 +884,7 @@
                 },
                 "name": {
                     "description": "name",
-                    "type": "integer",
-                    "format": "int32"
+                    "type": "string"
                 }
             }
         },
